# mcr-calendar-scrape

./: Cargo.toml
src/: main.rs
templates/: index.html
