[package]
name = "mcr-calendar-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  {version="0.6.20", features = ["macros"]}
chrono = { version="0.4.31", features = ["serde"] }
futures = "0.3.29"
tower = "0.4.13"
tower-http = {version = "0.4.4", features =["cors", "trace"]}
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
askama = "0.12.1"
